2006-02-23  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java (Child): Add static .sleepTime member.  Pass to
	funit-child.  Reduce sleep-time to 10, from 20 seconds.

2006-02-16  Stan Cox  <scox@redhat.com>

	* TestExec.java (testAttachedMultipleChildExec): Check getCmdLine
	and getCommand before and after exec.
	* TestLib.java (AckProcess (String)): New
	
2006-02-14  Stan Cox  <scox@redhat.com>

	* TaskState.java (processExecedEvent): Refresh stat call.
	* Proc.java (getCommand): Don't cache.
	(getExe): Likewise.
	(getCmdLine): Likewise.
	* LinuxHost.java (PollWaitOnSigChld):  Pass arg to logger message.

2006-02-12  Andrew Cagney  <cagney@redhat.com>

	* TestRefresh.java (testExitLoosesAllChildren): New.
	* LinuxHost.java: Add more comments.

2006-02-10  Adam Jocksch  <ajocksch@redhat.com>

	* DummyHost.java: Added.
	* DummyProc.java: Added.
	* DummyTask.java: Added.

2006-02-08  Andrew Cagney  <cagney@redhat.com>

	* HostObserver.java: New file.  Draft.

2006-02-07  Stan Cox  <scox@redhat.com>

	* TestExec.java (testAttachedMultipleParentExec): New.
	(testAttachedMultipleChildExec): Rename, simplify, eliminate
	explict refresh call. 

2006-02-05  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java: Prefix executables with prefix from
	frysk.junit.Paths; add funit- et.al. prefixes to program names.
	* TestExec.java: Ditto.
	* TestI386Modify.java: Ditto.
	* TestI386Regs.java: Ditto.
	* TestModify.java: Ditto.
	* TestProcGet.java: Ditto.
	* TestSyscall.java: Ditto.
	* TestSyscall2.java: Ditto.
	* TestSyscallInterrupt.java: Ditto.
	* TestSyscallOpen.java: Ditto.
	* TestTaskClonedObserver.java: Ditto.
	* TestTaskForkedObserver.java: Ditto.
	* TestTaskObserver.java: Ditto.
	* TestTaskObserverBlocked.java: Ditto.
	* TestTaskTerminateObserver.java: Ditto.

2006-02-02  Andrew Cagney  <cagney@redhat.com>

	* TestExec.java (testAttachedSingleExec): Simplify, eliminate
	explict refresh call.

2006-02-02  Stan Cox  <scox@redhat.com>
